[Build] add patch for Mac arm64 build

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -1,5 +1,9 @@
 patches = [
   {
+      'name': 'node-nw',
+      'path': 'third_party/node-nw/',
+  },
+  {
       'name': 'devtools',
       'path': 'third_party/devtools-frontend/src/',
   },
